--- a/carrera.html
+++ b/carrera.html
@@ -317,7 +317,7 @@
                 <i class="fas fa-caret-right"></i>
                 sandra vissani
             </a><br>
-            <a target="_blank" href="#">
+            <a target="_blank" href="https://pizpiretos.com.ar/#!/-home/">
                 <i class="fas fa-caret-right"></i>
                 GISELA RADEMAKERS
             </a><br>
