--- a/abj.html
+++ b/abj.html
@@ -126,7 +126,7 @@
             <p>on line</p>
         </div>
         <div class="curso-col-text">
-            <h2>aprendizaje basado en el juego</h2>
+            <h2>aprendizaje basado en juego</h2>
         </div>
         <div class="curso-programa">
             <div class="curso-programa-boton">
