--- a/cursos.html
+++ b/cursos.html
@@ -245,7 +245,7 @@
             <div class="preguntas-texto-contenido">
                 <p>
                     El curso consta de 3 módulos con una duración estimada de 3 meses, pudiendo
-                    manejar tus díasy horarios.
+                    manejar tus días y horarios.
                 </p>
             </div>
         </div>
@@ -259,7 +259,7 @@
                     Cada módulo incluye:<br>
                     Material visual (videos de you tube, power point) videos del profesor.<br>
                     Autoevaluaciones y Tareas.<br>
-                    También cuenta conel foro para abrir dialogo entre los que cursan y el profesor.<br>
+                    También cuenta con el foro para abrir dialogo entre los que cursan y el profesor.<br>
                     Cada módulo necesita que se completen estas dos instancias para habilitar al
                     siguiente.
                 </p>
@@ -283,7 +283,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso tiene un costo de $6.000.- ó 3 cuotas de $2.300.- (pesos argentinos).
+                    El curso tiene un costo de $6.000.- (pesos argentinos).
                 </p>
             </div>
         </div>
