--- a/titeres.html
+++ b/titeres.html
@@ -191,7 +191,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso está dirigido a docentes, estudiantes, animadores, ludotecariosy
+                    El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
                     toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
                 </p>
             </div>
@@ -252,7 +252,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    En cada modulose guiará para la realización del títere o teatro a través de videos
+                    Se guiará para la realización del títere o teatro a través de videos
                     e intercambios con el profesor.<br>
                     También cuenta con el foro para abrir diálogo entre los cursantes y el profesor.<br>
                     La finalización de cada trabajo habilitará para pasar al próximo módulo.
