--- a/titeres.html
+++ b/titeres.html
@@ -240,7 +240,7 @@
         <div class="preguntas-texto">
             <div class="preguntas-texto-contenido">
                 <p>
-                    El curso consta de 1 módulos con una duración estimada de 1 mes, pudiendo
+                    El curso consta de 1 módulo con una duración estimada de 1 mes, pudiendo
                     manejar tus días y horarios.
                 </p>
             </div>
