--- a/carrera.html
+++ b/carrera.html
@@ -313,22 +313,60 @@
             <p>de alumnos y profesores de YUGUETS</p>
         </div>
         <div class="emprendimientos-body">
-            <a target="_blank" href="https://casahomoludens.com/">
-                <i class="fas fa-caret-right"></i>
-                sandra vissani
-            </a><br>
-            <a target="_blank" href="https://pizpiretos.com.ar/#!/-home/">
-                <i class="fas fa-caret-right"></i>
-                GISELA RADEMAKERS
-            </a><br>
-            <a target="_blank" href="https://www.facebook.com/Trocito-de-Mundo-1032202620502634/">
-                <i class="fas fa-caret-right"></i>
-                GLORIA M. GOROSITO
-            </a><br>
             <a target="_blank" href="https://www.los-realizadores.com.ar/">
-                <i class="fas fa-caret-right"></i>
-                SEBASTIÁN GONZÁLEZ
-            </a><br>
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>sebastián gonzález</h3>
+                    <h4>Los Realizadores</h4>
+                    <p>Creación de títeres, botargas, escenografías y vestuario.</p>
+                </div>
+            </a>
+            <a target="_blank" href="https://www.instagram.com/kigurumisypantuflas/">
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>sebastián gonzález</h3>
+                    <h4>Kigurumis y pantuflas</h4>
+                    <p>Vestuario diario con temática animé.</p>
+                </div>
+            </a>
+            <a target="_blank" href="https://www.instagram.com/maskcreadorderisas/">
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>sebastián gonzález</h3>
+                    <h4>Mask creador de risas</h4>
+                    <p>Experiencias didácticas en Cartón.</p>
+                </div>
+            </a>
+            <a target="_blank" href="https://casahomoludens.com/">
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>sandra vissani</h3>
+                    <h4>Casa homo ludens</h4>
+                    <p>Salas de escape, venta de juegos de mesa y ludoteca.</p>
+                </div>
+            </a>
+            <a target="_blank" href="https://pizpiretos.com.ar/#!/-home/">
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>gisela rademakers</h3>
+                    <h4>Pizpiretos</h4>
+                    <p>
+                        Emprendimiento  dedicado al diseño, fabricación de productos
+                        y espacio lúdicos que estimulan la imaginación, la creatividad
+                        y el juego.
+                    </p>
+                </div>
+            </a>
+            <a target="_blank" href="https://www.facebook.com/Trocito-de-Mundo-1032202620502634/">
+                <!-- <i class="fas fa-caret-right"></i> -->
+                <div class="emprendimientos-contenido">
+                    <h3>gloria m. gorosito</h3>
+                    <h4>Trocito de Mundo</h4>
+                    <p>
+                        Muñecos de tela artesanal.
+                    </p>
+                </div>
+            </a>
         </div>
     </div>
     <div class="btn-subir">
