--- a/carrera.html
+++ b/carrera.html
@@ -310,7 +310,7 @@
         <div class="emprendimientos-titulo">
             <h3>emprendimientos</h3>
             <h2>destacados</h2>
-            <p>de alumnos y profesores de YUGUETS</p>
+            <p>de ALUMNOS Y PROFESORES de YUGUETS</p>
         </div>
         <div class="emprendimientos-body">
             <a target="_blank" href="https://www.los-realizadores.com.ar/">
