--- a/abj.html
+++ b/abj.html
@@ -130,11 +130,206 @@
         </div>
         <div class="curso-programa">
             <div class="curso-programa-boton">
-                <h1>abj</h1>
+                <h4>ver programa >>></h4>
+            </div>
+            <div class="curso-programa-datos">
+                <p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    sede plataforma online
+                </p>
+                <p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    Habilitado durante las 24 hs.
+                </p>
             </div>
         </div>
         <div class="curso-programa-drop">
-            <h2>"proximamente"</h2>
+            <div class="drop-contenido">
+                <div class="drop-item">
+                    <ul>
+                        <li>
+                            <p>
+                                El juego de mesa, historia y componentes
+                            </p>
+                        </li>
+                        <li>
+                            <p> 
+                                Que es ABJ
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Bases pedagógicas<br>
+                                a-El educador/a y dinamizador del juego.<br>
+                                b-El jugador/a.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Familia de los juegos de mesa
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                El juego en la educación formal y no formal
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                El juego en el aula, experiencias y aplicaciones
+                            </p>
+                        </li>
+                    </ul>
+                    <p>
+                        a cargo de las profesionales<br>
+                        -Natalia Jiménez Morelli<br>
+                        -Sandra Vissani
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PREGUNTAS FRECUENTES -->
+    <div class="curso-abj">
+        <div class="abj-img">
+            <img src="img/cursoABJ.jpg" alt="">
+        </div>
+        <div class="abj-pago">
+            <h3>Curso completo de ABJ</h3>
+            <p>Valor del curso AR$5.000-</p>
+            <a href="https://forms.gle/UpE1ta2Bps1NXuiX6" class="abj-btn-primero">Inscripcion</a>
+            <a href="https://mpago.la/2HMktJS" class="abj-btn-segundo">Adquirir CURSO</a>
+        </div>
+        <div class="abj-texto">
+            <p>
+                Además de las CURSOS, la Carrera Oficial y
+                talleres intensivos que facilitan una rápida
+                inserción laboral reciben comprobante de
+                formación profesional dados por el Centro
+                Yuguets Argentina (ONG).
+            </p>
+        </div>
+    </div>
+    <div class="curso-img-contenedor">
+        <h3>Curso completo de <strong>ABJ</strong> con especialistas</h3>
+    </div>
+    <div class="preguntas-title">
+        <h3>Preguntas frecuentes</h3>
+    </div>
+    <div class="preguntas-frecuentes">
+        <div class="preguntas-item-contenido">
+            <p>¿A quién apunta el curso?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
+                    toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Quienes son los docentes?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+               <p>
+                    Prof. Sandra Vissani<br>
+                    - Master en Gamificación y Narrativa Transmedia (IEBS, Barcelona, España)<br>
+                    - Diplomatura en creación de juegos de mesa (UTN, Buenos Aires, Argentina)<br>
+                    - Técnica nacional en recreación (Estudio Ines Moreno, Buenos Aires)<br>
+                    - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br><br>
+                    Natalia Jiménez Morell<br>
+                    - Maestra de educación infantil (Universidad de Barcelona, España)<br>
+                    - Especialista en educación socio constructivista (Escuela de especialización Educativa Lima, Perú)<br>
+                    - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br>
+               </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Cómo es el proceso de inscripción?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    Para inscribirse al curso podes hacerlo directamente desde el botón Adquirir y
+                    seguir los pasos o bien contactarse con nosotros vía whatsapp o E-mail.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Cuando puedo empezar?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    Fecha de inicio: 12 de mayo del 2021.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Cual es la duración del curso?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    El curso consta de 5 encuentros.<br>
+                    MIERCOLES de 18:30 a 20:00 hs.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Cómo es la dinámica del curso?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    TEMARIO - El programa se ofrece a distancia mediante clases en vivo por zoom,
+                    y un grupo de WhatsApp para consultas y compartir experiencias.<br>
+                    Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes
+                    no hayan podido conectarse o deseen volver a verlas.<br>
+                    Para ser evaluado deberá presentar un trabajo práctico.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Puedo hacer varios cursos a la vez?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    Con ésta modalidad efectivamente es posible inscribirse en más de un curso simultáneamente.
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p>¿Cual es el valor del curso?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    El curso tiene un costo de $5.000.- ó 2 cuotas de $2.800.- (pesos argentinos).
+                </p>
+            </div>
+        </div>
+        <div class="preguntas-item-contenido">
+            <p> ¿Qué opciones de pago tengo?</p>
+            <i class="fas fa-chevron-right pato-sub"></i>
+        </div>
+        <div class="preguntas-texto">
+            <div class="preguntas-texto-contenido">
+                <p>
+                    Transferencia Bancaria o MercadoPago.
+                </p>
+            </div>
         </div>
     </div>
     <!-- FOOTER -->
