--- a/inscripcion.html
+++ b/inscripcion.html
@@ -94,17 +94,18 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2021</h3>
+                <h3>Ingreso Marzo 2022</h3>
             </div><br><br>
-            <!-- <div class="btn-masthead">
-                <a href="inscripcion.html" class="btn">Inscripción</a>
-            </div> -->
+            <div class="btn-masthead">
+                <a href="https://forms.gle/u5VTHzuJ4dt1HH9E8" class="btn">Formulario</a>
+            </div>
         </div>
     </div>
     <!-- CONTENIDO PAGINA -->
     <div class="masthead">
         <div class="col-1">
-            <div class="formulario-inscripcion">
+            <img src="img/mapamundi.png" alt="Yuguets" class="col-inscripcion-imagen">
+            <!-- <div class="formulario-inscripcion">
                 <div class="form-1">
                     <form action="">
                         <div class="form-title">
@@ -185,10 +186,10 @@
                         <button class="btn inscripcion" id="btn-contacto">Enviar</button>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="col-2 col-inscripcion">
-            <a target="_blank" href="https://mpago.la/2PV812x">
+            <a target="_blank" href="https://mpago.la/15hYwhf">
                 abonar matricula
             </a>
             <p class="aclaracion">
