--- a/cursos.html
+++ b/cursos.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2021</h3>
+                <h3>Ingreso Marzo 2022</h3>
             </div>
             <div class="btn-masthead">
                 <a href="inscripcion.html" class="btn">Inscripción</a>
@@ -144,6 +144,7 @@
             </div>
         </div>
         <div class="curso-programa-drop">
+            <h2 class="prox-text">"proximamente"</h2>
             <div class="drop-contenido">
                 <div class="drop-item">
                     <ul>
