--- a/contacto.html
+++ b/contacto.html
@@ -56,6 +56,9 @@
                         <a href="contacto.html">contacto</a>
                         <div class="linea-link"></div>
                     </li>
+                    <li class="nav-link">
+                        <a href="landing/index.html">eventos</a>
+                    </li>
                 </ul>
             </div>
         </div>
