--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
+                    <li class="nav-link">
+                        <a href="landing/index.html">eventos</a>
+                    </li>
                 </ul>
             </div>
         </div>
