--- a/ong.html
+++ b/ong.html
@@ -55,6 +55,9 @@
                     <li class="nav-link">
                         <a href="contacto.html">contacto</a>
                     </li>
+                    <li class="nav-link">
+                        <a href="landing/index.html">eventos</a>
+                    </li>
                 </ul>
             </div>
         </div>
