--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
             </div>
         </div>
     </a>
+    <!-- LINK PROPAGANDA CURSO -->
+    <a href="abj.html">
+        <div class="propaganda-curso">
+            <h3>Curso de verano</h3> 
+            <h3>disponible</h3>
+            <p>Inicia el 16 de febrero</p>
+        </div>
+    </a>
     <!-- MASTHEAD -->
     <div class="masthead imagen">
         <div class="col-1">
