--- a/abj.html
+++ b/abj.html
@@ -147,7 +147,9 @@
             </div>
         </div>
         <div class="curso-programa-drop">
-            <h2 class="prox-text">"proximamente"</h2>
+            <h2 class="prox-text">cuso de verano<br>
+                <p>Inicia el 16 de febrero</p>
+            </h2>
             <div class="drop-contenido">
                 <div class="drop-item">
                     <ul>
@@ -200,9 +202,9 @@
         </div>
         <div class="abj-pago">
             <h3>Curso completo de ABJ</h3>
-            <p>Valor del curso AR$5.000-</p>
+            <p>Valor del curso AR$6.000-</p>
             <a href="https://forms.gle/UpE1ta2Bps1NXuiX6" class="abj-btn-primero">Inscripcion</a>
-            <a href="https://mpago.la/2HMktJS" class="abj-btn-segundo">Adquirir CURSO</a>
+            <a href="https://mpago.la/2ynGxsH" class="abj-btn-segundo">Adquirir CURSO</a>
         </div>
         <div class="abj-texto">
             <p>
@@ -214,125 +216,134 @@
             </p>
         </div>
     </div>
-    <div class="curso-img-contenedor">
-        <h3>Curso completo de <strong>ABJ</strong> con especialistas</h3>
-    </div>
-    <div class="preguntas-title">
-        <h3>Preguntas frecuentes</h3>
-    </div>
-    <div class="preguntas-frecuentes">
-        <div class="preguntas-item-contenido">
-            <p>¿A quién apunta el curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
+    <div class="abj-contendor">
+        <div class="abj-img">
+            <img src="img/abj-min.jpg" alt="">
         </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
-                    toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
-                </p>
+        <div class="preg-frecuentes-abj">
+            <div class="curso-img-contenedor">
+                <h3>Curso completo de <strong>ABJ</strong> con especialistas</h3>
             </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Quienes son los docentes?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-               <p>
-                    Prof. Sandra Vissani<br>
-                    - Master en Gamificación y Narrativa Transmedia (IEBS, Barcelona, España)<br>
-                    - Diplomatura en creación de juegos de mesa (UTN, Buenos Aires, Argentina)<br>
-                    - Técnica nacional en recreación (Estudio Ines Moreno, Buenos Aires)<br>
-                    - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br><br>
-                    Natalia Jiménez Morell<br>
-                    - Maestra de educación infantil (Universidad de Barcelona, España)<br>
-                    - Especialista en educación socio constructivista (Escuela de especialización Educativa Lima, Perú)<br>
-                    - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br>
-               </p>
+            <div class="preguntas-title">
+                <h3>Preguntas frecuentes</h3>
             </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cómo es el proceso de inscripción?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Para inscribirse al curso podes hacerlo directamente desde el botón Adquirir y
-                    seguir los pasos o bien contactarse con nosotros vía whatsapp o E-mail.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cuando puedo empezar?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Fecha de inicio: 12 de mayo del 2021.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cual es la duración del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso consta de 5 encuentros.<br>
-                    MIERCOLES de 18:30 a 20:00 hs.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cómo es la dinámica del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    TEMARIO - El programa se ofrece a distancia mediante clases en vivo por zoom,
-                    y un grupo de WhatsApp para consultas y compartir experiencias.<br>
-                    Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes
-                    no hayan podido conectarse o deseen volver a verlas.<br>
-                    Para ser evaluado deberá presentar un trabajo práctico.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Puedo hacer varios cursos a la vez?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Con ésta modalidad efectivamente es posible inscribirse en más de un curso simultáneamente.
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p>¿Cual es el valor del curso?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    El curso tiene un costo de $5.000.- ó 2 cuotas de $2.800.- (pesos argentinos).
-                </p>
-            </div>
-        </div>
-        <div class="preguntas-item-contenido">
-            <p> ¿Qué opciones de pago tengo?</p>
-            <i class="fas fa-chevron-right pato-sub"></i>
-        </div>
-        <div class="preguntas-texto">
-            <div class="preguntas-texto-contenido">
-                <p>
-                    Transferencia Bancaria o MercadoPago.
-                </p>
+            <div class="preguntas-frecuentes">
+                <div class="preguntas-item-contenido">
+                    <p>¿A quién apunta el curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso está dirigido a docentes, estudiantes, animadores, ludotecarios y
+                            toda persona que desee adquirir una cultura lúdica o potenciar su creatividad.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Quienes son los docentes?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                       <p>
+                            Prof. Sandra Vissani<br>
+                            - Master en Gamificación y Narrativa Transmedia (IEBS, Barcelona, España)<br>
+                            - Diplomatura en creación de juegos de mesa (UTN, Buenos Aires, Argentina)<br>
+                            - Técnica nacional en recreación (Estudio Ines Moreno, Buenos Aires)<br>
+                            - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br><br>
+                            Natalia Jiménez Morell<br>
+                            - Maestra de educación infantil (Universidad de Barcelona, España)<br>
+                            - Especialista en educación socio constructivista (Escuela de especialización Educativa Lima, Perú)<br>
+                            - Fundadora de Casa Homo Ludens (Bahía Blanca, Argentina)<br>
+                       </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cómo es el proceso de inscripción?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Para inscribirse al curso podes hacerlo directamente desde el botón Adquirir y
+                            seguir los pasos o bien contactarse con nosotros vía whatsapp o E-mail.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cuando puedo empezar?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Fecha de inicio: 12 de mayo del 2021.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cual es la duración del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso consta de 4 encuentros.<br>
+                            16 y 23 de febrero; 2 y 9 de marzo.<br>
+                            <strong>Horario:</strong> 19 a 20:30 hs.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cómo es la dinámica del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            TEMARIO - El programa se ofrece a distancia mediante clases en vivo por zoom,
+                            y un grupo de WhatsApp para consultas y compartir experiencias.<br>
+                            Las clases en vivo quedarán grabadas en la plataforma de YUGUETS para quienes
+                            no hayan podido conectarse o deseen volver a verlas.<br>
+                            Para ser evaluado deberá presentar un trabajo práctico.<br>
+                            Al finalizarlo se otorgará el DIPLOMA correspondiente.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Puedo hacer varios cursos a la vez?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Con ésta modalidad efectivamente es posible inscribirse en más de un curso simultáneamente.
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p>¿Cual es el valor del curso?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            El curso tiene un costo de $6.000.- ó 2 cuotas de $3.500.- (pesos argentinos).
+                        </p>
+                    </div>
+                </div>
+                <div class="preguntas-item-contenido">
+                    <p> ¿Qué opciones de pago tengo?</p>
+                    <i class="fas fa-chevron-right pato-sub"></i>
+                </div>
+                <div class="preguntas-texto">
+                    <div class="preguntas-texto-contenido">
+                        <p>
+                            Transferencia Bancaria o MercadoPago.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
