--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="sass/normalize.css">
     <link rel="stylesheet" href="sass/main.css">
     <link href="img/iso.png" type="imagenes" rel="shortcurt icon"/>
+    <!-- No leer cache del navegador -->
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
